<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" style="@style/background">
    <item android:id="@+id/no_margins" android:title="@string/no_margins" android:icon="@drawable/ic_margins_no"/>
    <item android:id="@+id/normal_margins" android:title="@string/normal_margins"  android:icon="@drawable/ic_margins_normal"/>
    <item android:id="@+id/wide_margins" android:title="@string/wide_margins"  android:icon="@drawable/ic_margins_wide"/>
    <item android:id="@+id/page_unreadable" android:title="@string/page_unreadable" android:icon="@drawable/ic_unreadable"/>
    <item android:id="@+id/preprocess" android:title="@string/enhance"  android:icon="@drawable/ic_enhance"/>
    <item android:id="@+id/print" android:title="@string/print" android:icon="@drawable/ic_print"/>
    <item android:id="@+id/navigation" android:title="@string/kindle_navigation" android:icon="@drawable/ic_nav"/>
    <item android:id="@+id/scrollbars" android:title="@string/show_scrollbars" android:icon="@drawable/ic_scrollbars"/>
</menu>