<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/topLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.veve.flowreader.views.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="end|center_vertical"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/theme"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/list_view"
                android:labelFor="@string/list_view"
                android:onClick="changeTheme"
                app:srcCompat="@drawable/ic_baseline_brightness_3_24" />
            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/books_list"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/list_view"
                android:labelFor="@string/list_view"
                app:srcCompat="@drawable/ic_baseline_view_list_24" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/books_grid"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/grid_view"
                android:labelFor="@string/grid_view"
                app:srcCompat="@drawable/ic_baseline_view_module_24" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/about_btn"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center_vertical"
                android:contentDescription="@string/about_program"
                app:srcCompat="@drawable/ic_more_vert" />

            </LinearLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context="com.veve.flowreader.views.MainActivity"
        tools:showIn="@layout/activity_main"
        style="@style/background">

        <android.widget.GridView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/grid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="40dp"
            android:horizontalSpacing="20dp"
            android:verticalSpacing="20dp"
            android:scrollbars="none"
            android:scrollbarThumbVertical="@null"
            android:scrollbarThumbHorizontal="@null"
            tools:context="org.studies.android.activities.GridLayoutActivity"
            style="Standard"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:contentDescription="@string/add_book"
        android:labelFor="@string/add_book"
        app:fabCustomSize="70dp"
        app:maxImageSize="30dp"
        app:srcCompat="@drawable/ic_book_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>