<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.HelpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:padding="50sp"
        android:orientation="vertical">

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->
<!--            <ImageView-->
<!--                android:layout_width="200dp"-->
<!--                android:layout_height="100dp"-->
<!--                app:srcCompat="@drawable/ic_tap_left"-->
<!--                android:contentDescription="@string/double_tap_left"-->
<!--                android:background="@color/colorPrimary"/>-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/double_tap_left"-->
<!--                style="@style/caption"-->
<!--                android:background="@color/colorPrimary"/>-->
<!--        </LinearLayout>-->

<!--        <LinearLayout-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="vertical">-->
<!--            <ImageView-->
<!--                android:layout_width="200dp"-->
<!--                android:layout_height="100dp"-->
<!--                app:srcCompat="@drawable/ic_tap_right"-->
<!--                android:contentDescription="@string/double_tap_right"-->
<!--                android:background="@color/colorPrimary"/>-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:text="@string/double_tap_right"-->
<!--                style="@style/caption"-->
<!--                android:background="@color/colorPrimary"/>-->
<!--        </LinearLayout>-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_tap_center"
                android:tint="@color/colorAccent"
                android:contentDescription="@string/single_tap"
                android:background="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/single_tap"
                style="@style/caption"
                android:background="@color/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_to_book_large"
                android:tint="@color/colorAccent"
                android:contentDescription="@string/show_original"
                android:background="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_original"
                style="@style/caption"
                android:background="@color/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_to_phone_large"
                android:tint="@color/colorAccent"
                android:contentDescription="@string/show_overturned"
                android:background="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/show_overturned"
                style="@style/caption"
                android:background="@color/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_enhance"
                android:tint="@color/colorAccent"
                android:contentDescription="@string/preprocess_explained"
                android:background="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/preprocess_explained"
                style="@style/caption"
                android:background="@color/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="100dp"
                app:srcCompat="@drawable/ic_page_unreadable"
                android:tint="@color/colorAccent"
                android:contentDescription="@string/report_explained"
                android:background="@color/colorPrimary"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_explained"
                style="@style/caption"
                android:background="@color/colorPrimary"/>
        </LinearLayout>

    </LinearLayout>

    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_return"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>